# rust-in-peace

./: .gitignore  CHANGELOG.md  CLAUDE.md  DISCLOSURES-PUBLIC.md  IMPROVEMENTS.md  LESSONS.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: agent-sandbox.md  customizing.md  extending.md  patching.md  pipeline.md  security.md  triage.md  troubleshooting.md  variant-analysis-results.md  variant-analysis.md
harness/: README.md  admissibility.py  agent.py  aggregate.py  artifacts.py  auth.py  build_profile.py  capabilities.py  cli.py  config.py  corpus.py  dedup.py  feedback.py  find.py  gates.py  grade.py  judge.py  novelty.py  patch.py  patch_grade.py  predisclose.py  profiles.py  reachability.py  redact.py  report.py  sandbox.py  soak.py  witness.py
harness/android_app/: __init__.py  detect.py  find_prompt.py  find_to_fuzz.py  grade_prompt.py  intel.py  judge_prompt.py  patch_prompt.py  promote.py  (+1 more)
scripts/: run_fuzz_soak.sh
self-review/: FINDINGS.md  THREAT_MODEL.md
targets/: README.md
targets/rust-canary/crate/: Cargo.toml
targets/rust-canary/crate/src/: lib.rs
tests/: test_admissibility.py  test_aggregate.py  test_android_detect.py  test_android_dynamic.py  test_android_intel.py  test_android_promote.py  test_artifacts.py  test_auth.py  test_build_profile.py  test_capabilities.py  test_capabilities_android.py  test_config_commit_guard.py  test_corpus.py  test_feedback.py  test_find_to_fuzz.py  test_gates.py  test_maintainer_review_prompt.py  test_predisclose.py  test_reachability.py  test_redact.py  test_soak.py  test_witness.py
(+102 files in other folders)
